[workspace]
resolver = "2"
members = [
    "prediction_market",
    "PULSE_token",
    "referral_registry",
    "leaderboard",
]

[workspace.dependencies]
soroban-sdk = "26.0.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

